# sleepydiscord-squirrel

./: CMakeLists.txt
include/sqrat/: sqratArray.h  sqratObject.h  sqratTable.h
src/: CDiscord.cpp  CDiscord.h  CError.h  CMakeLists.txt  CMessage.cpp  CMessage.h  CSession.cpp  CSession.h  CallbackHandler.cpp  CallbackHandler.h  Channel.cpp  Channel.h  Common.cpp  Common.hpp  Constants.cpp  DEmbed.cpp  DEmbed.h  EventHandler.h  Functions.cpp  Functions.h  Guild.cpp  Guild.h  Message.cpp  Message.h  Role.cpp  SQFunctions.cpp  ServerMember.cpp  ServerMember.h  User.cpp  main.cpp  main.h
